Fix centered text on mobile

--- a/src/css/_intro.scss
+++ b/src/css/_intro.scss
@@ -18,3 +18,9 @@
     text-align: center;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .intro__content p {
+    padding-left: 0;
+  }
+}
